--- a/source/style.scss
+++ b/source/style.scss
@@ -2,52 +2,53 @@
 Base imports
 ------------------------------------------------------------------*/
 
-@import 'utilities/reset';
-@import 'utilities/colours';
-@import 'utilities/mixins';
-@import 'utilities/fonts';
-@import 'utilities/buttons';
-@import 'utilities/notyf';
+@import "utilities/reset";
+@import "utilities/colours";
+@import "utilities/mixins";
+@import "utilities/fonts";
+@import "utilities/buttons";
+@import "utilities/notyf";
 
 /*------------------------------------------------------------------
 Base includes
 ------------------------------------------------------------------*/
 
-@import 'sections/flickity';
-@import 'sections/splide';
-@import 'sections/header';
-@import 'sections/choices';
-@import 'sections/footer';
-@import 'sections/fourohfour';
-@import 'sections/mobile-navigation';
-@import 'sections/announcement';
-@import 'sections/banner';
-@import 'sections/banner-blog';
-@import 'sections/sidecart';
-@import 'sections/search';
-@import 'sections/grid';
-@import 'sections/collections';
-@import 'sections/hero';
-@import 'sections/instagram';
-@import 'sections/blog';
-@import 'sections/related-articles';
-@import 'sections/related-products';
-@import 'sections/product';
-@import 'sections/collection-grid';
-@import 'sections/banner-collection';
-@import 'sections/cart';
-@import 'sections/challenge';
-@import 'sections/accordion';
-@import 'sections/text';
-@import 'sections/image-text'; 
-@import 'sections/grid-with-text'; 
-@import 'sections/cursor'; 
-@import 'sections/lightbox'; 
-@import 'sections/products'; 
-@import 'sections/contact'; 
-@import 'sections/icon'; 
-@import 'sections/mega';  
-@import 'sections/password';  
-@import 'sections/quick-view';  
-@import 'sections/benefits';  
-@import 'sections/steps';  
+@import "sections/flickity";
+@import "sections/splide";
+@import "sections/header";
+@import "sections/choices";
+@import "sections/footer";
+@import "sections/fourohfour";
+@import "sections/mobile-navigation";
+@import "sections/announcement";
+@import "sections/banner";
+@import "sections/banner-blog";
+@import "sections/sidecart";
+@import "sections/search";
+@import "sections/grid";
+@import "sections/collections";
+@import "sections/hero";
+@import "sections/instagram";
+@import "sections/blog";
+@import "sections/related-articles";
+@import "sections/related-products";
+@import "sections/product";
+@import "sections/collection-grid";
+@import "sections/banner-collection";
+@import "sections/cart";
+@import "sections/challenge";
+@import "sections/accordion";
+@import "sections/text";
+@import "sections/image-text";
+@import "sections/grid-with-text";
+@import "sections/cursor";
+@import "sections/lightbox";
+@import "sections/products";
+@import "sections/contact";
+@import "sections/icon";
+@import "sections/mega";
+@import "sections/password";
+@import "sections/quick-view";
+@import "sections/benefits";
+@import "sections/steps";
+@import "sections/text-text-image";
