--- a/source/sections/text-text-image.scss
+++ b/source/sections/text-text-image.scss
@@ -2,7 +2,7 @@
 Image and text blocka
 ------------------------------------------------------------------*/
 
-.image-element {
+.text-text-image-element {
   position: relative;
   width: 100%;
   overflow: hidden;
