--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -223,9 +223,8 @@
 
     {{ content_for_layout }}
 
-    {% comment %} if product page  {% endcomment %}
-    {% if request.page_type == 'product' && template.name == 'product' && template.suffix == '' %}
-      <div class="related-products">
+    {% if request.page_type == 'product' and template.suffix != 'product-page-with-blocks' %}
+      <div class="related-products main-theme-variant" data-suffix="{{ template.suffix }}">
         <div class="related-products-wave1 [ js-wave ]">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1366 768">
             <path d="M0,32L48,74.7C96,117,192,203,288,245.3C384,288,480,288,576,266.7C672,245,768,203,864,176C960,149,1056,139,1152,149.3C1248,160,1344,192,1392,208L1440,224L1440,320" stroke-width="1" stroke="red" fill-opacity="0"/>
