--- a/sections/main-list-collections.liquid
+++ b/sections/main-list-collections.liquid
@@ -77,6 +77,13 @@
                 <b>{{ product.price | money }}</b>
               </h6>
             </a>
+            <a href="{{ product.url }}" class="">
+            <!-- Start of Judge.me code -->
+            <div class="jdgm-widget jdgm-preview-badge" data-id="{{ product.id }}">
+              {{ product.metafields.judgeme.badge }}
+            </div>
+            <!-- End of Judge.me code -->
+            </a>
             <a href="{{ product.url }}" class="collection-grid__list__item__description">
               <p>{{ product.metafields.custom.short_description }}</p>
             </a>
