--- a/source/sections/collection-grid.scss
+++ b/source/sections/collection-grid.scss
@@ -15,7 +15,11 @@
     padding-bottom: 4rem;
     overflow: hidden;
 
-    .js-gradient{
+    .jdgm-widget {
+        margin-bottom: 1rem;
+    }
+
+    .js-gradient {
         width: 100%;
     }
 
