--- a/source/sections/collections.scss
+++ b/source/sections/collections.scss
@@ -246,6 +246,10 @@
         transition: all $slow;
         transform: translateX(10%);
 
+        .jdgm-widget {
+            margin-bottom: 1rem;
+        }
+
         @media screen and (max-width: 768px) {
             padding-top: 3rem;
             margin-bottom: -6rem;
