--- a/source/sections/quick-view.scss
+++ b/source/sections/quick-view.scss
@@ -7,6 +7,8 @@
     visibility: hidden;
     transition: all $fast;
     overflow: hidden;
+    background-color: rgba(white, 0.5);
+    backdrop-filter: blur(5px);
 
     .product-gallery {
         position: relative;
@@ -20,65 +22,30 @@
         }
     }
 
-    &-background {
-        @include full;
-        background: var(--off-white);
-        opacity: 0.9;
-        transition: all $medium;
-        opacity: 0;
-        visibility: hidden;
-        transform: scale(1.1);
-
-        &:before {
-            @include pseudo;
-            @include full;
-            background-image: radial-gradient(var(--green) 0.5px, transparent 0.5px),
-                radial-gradient(var(--green) 0.5px, var(--off-white) 0.5px);
-            background-size: 20px 20px;
-            background-position:
-                0 0,
-                10px 10px;
-            opacity: 0.4;
-        }
-
-        &-wave2,
-        &-wave1 {
-            @include svg(1366, 768);
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            transform: translateY(0%) translateX(-30%) rotate(-40deg);
-
-            path {
-                stroke: var(--green);
-            }
-        }
-
-        &-wave2 {
-            transform: translateY(-50%) translateX(-20%) rotate(-220deg);
-        }
-    }
-
     &-draw {
         position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        width: 40rem;
+        top: 4rem;
+        margin: 0 auto;
+        width: calc(100% - 5rem);
+        max-width: 90rem;
         background: var(--blue-light);
-        box-shadow: 0 10px 30px rgba(#000, 0.05);
+        box-shadow: 0 10px 30px rgba(#000, 0.15);
         opacity: 0;
+        border-radius: 1rem;
         transition: all $fast;
         transform: rotateY(-15deg);
         transform: rotateY(-25deg);
         transform-origin: 100% 100%;
+        display: flex;
+        flex-wrap: wrap;
 
         @media screen and (max-width: 768px) {
             width: 100%;
         }
 
         &-head {
+            width: 100%;
+
             padding: 1rem 2rem 2rem;
 
             p {
@@ -200,9 +167,18 @@
 }
 
 .quickview-visible {
+    overflow: hidden;
+    height: calc(100% + 1px);
+    position: relative;
+
     .quickview {
         opacity: 1;
         visibility: visible;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        justify-content: center;
+        overflow: auto;
 
         &-background {
             opacity: 1;
@@ -330,6 +306,31 @@ html .quickview {
             &.busy {
                 color: var(--pink) !important;
             }
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .quickview-draw {
+        width: calc(100% - 2rem);
+    }
+}
+
+.quickview-draw-content {
+    @media screen and (min-width: 768px) {
+        .product-details-form,
+        .product-details-price,
+        .product-details-description,
+        .product-details {
+            width: calc(50%);
+            float: right;
+            padding-left:0rem;
+        }
+
+        .product-gallery {
+            width: calc(50%);
+            float: left;
+            padding-right: 4rem;
         }
     }
 }
